<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chatroom.ChatRoomActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500"
            app:menu="@menu/menu_chat_room"
            app:navigationIcon="@drawable/ic_back_white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            app:title="@string/chat_room"
            app:titleTextAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/message_edit_text_id"
        app:layout_constraintTop_toBottomOf="@id/appbar_id"
        tools:listitem="@layout/item_received_message" />

    <EditText
        android:id="@+id/message_edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="6dp"
        android:autofillHints="@string/message"
        android:background="@drawable/edit_text_background"
        android:hint="@string/message"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/message_edit_text_id">

        <ImageView
            android:id="@+id/send_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_forward"
            android:text="@string/send"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:padding="10dp"
            android:src="@drawable/ic_image"
            android:text="@string/send"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>